[package]
name = "rins"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface"]
description= "A small server to serve a directory locally."
homepage = "https://github.com/angeldollface/rins"
repository = "https://github.com/angeldollface/rins"
documentation = "https://github.com/angeldollface/rins"
readme = "README.markdown"
keywords = [
  "cli",
  "server"
]
categories = [
  "command-line-utilities"
]
exclude = [
  "scripts",
  "/.github"
]

[dependencies]
colored = "2.0.0"
file-serve = "0.1.1"
cleasy = { git = "https://github.com/angeldollface/cleasy", version = "1.2.0" }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
